# sparse-lm

./: .buildinfo  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  api.html  changelog.html  contributing.html  examples.html  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.html  searchindex.js  sparselm.model.html  sparselm.model_selection.html  sparselm.stepwise.html  sparselm.tools.html
.doctrees/: api.doctree  changelog.doctree  contributing.doctree  examples.doctree  index.doctree  install.doctree  license.doctree  sparselm.model.doctree  sparselm.model_selection.doctree  sparselm.stepwise.doctree  sparselm.tools.doctree
.doctrees/auto_examples/: index.doctree  plot_adaptive.doctree  plot_chull.doctree  plot_gl_sgl.doctree  plot_line_search.doctree  plot_one_std.doctree  plot_sparse_signal.doctree  plot_stepwise.doctree  sg_execution_times.doctree
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  code_review.md  feature_request.md  feature_request.yml
.github/workflows/: build.yml  coverage.yml  docs.yml  lint.yml  release.yml  test.yml  update-precommit.yaml
_downloads/0b537d47053d1510a977109460626422/: plot_chull.py
_downloads/2e04a583f34e81583965ebc49021e99a/: plot_stepwise.ipynb
_downloads/316c1bee37a03ef94b4f109bed7d06c8/: plot_stepwise.py
_downloads/373b60e41d8213a340310f29e96b1f45/: plot_gl_sgl.ipynb
_downloads/39a83300f446e639cdeb32321aaa210b/: plot_line_search.py
_downloads/3b2bfbd64df004263e816b9589b05cb3/: plot_line_search.ipynb
_downloads/4b570d1f46d95b8c849948a039fba267/: plot_one_std.ipynb
_downloads/4e20a334cb964e28ad034553682e0e5e/: plot_adaptive.py
_downloads/74df2f6cd28e06f7390261b69d55ceaf/: plot_sparse_signal.py
_downloads/7dfa9858cd272285293a817a57e9b49e/: plot_sparse_signal.ipynb
_downloads/95a4f904eef43a2cf2ada2dd46c03db6/: plot_chull.ipynb
_downloads/d10c07facecfdb74b81e6b3d9c92ff32/: plot_adaptive.ipynb
_modules/: index.html
_modules/sparselm/: model_selection.html  stepwise.html  tools.html
_modules/sparselm/model/: _adaptive_lasso.html  _lasso.html  _ols.html
_modules/sparselm/model/_miqp/: _best_subset.html  _regularized_l0.html
_sources/: contributing.rst.txt  license.rst.txt
_sources/auto_examples/: index.rst.txt  plot_adaptive.rst.txt  plot_chull.rst.txt  plot_gl_sgl.rst.txt  plot_line_search.rst.txt  plot_one_std.rst.txt  plot_sparse_signal.rst.txt  plot_stepwise.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  plot_adaptive.html  plot_chull.html  plot_gl_sgl.html  plot_line_search.html  plot_one_std.html  plot_sparse_signal.html  plot_stepwise.html  sg_execution_times.html
docs/: api.rst  conf.py  examples.rst  index.rst  install.rst  license.rst  sparselm.model.rst  sparselm.model_selection.rst  sparselm.stepwise.rst  sparselm.tools.rst
examples/: README.rst  corr.npy  energy.npy  plot_adaptive.py  plot_best_subset.py  plot_chull.py  plot_gl_sgl.py  plot_line_search.py  plot_one_std.py  plot_sparse_signal.py  plot_stepwise.py  structures.json
paper/: paper.bib  paper.md
sparselm/: model_selection.py  optimizer.py  tools.py
sparselm/model/: __init__.py  _adaptive_lasso.py  _base.py  _lasso.py  _ols.py  adaptive_lasso.py  base.py  lasso.py  mixedL0.py  ols.py
sparselm/model/miqp/: __init__.py  _best_subset.py  _regularized_l0.py  best_subset.py  regularized_l0.py
sparsipy/: __init__.py  adaptive_lasso.py  lasso.py  mixedL0.py  tools.py
sparsipy/examples/: test_opt_cvx_gurobi.ipynb
sparsipy/examples/data/: A_valid_7_4_4_MnTiOF_fromBin_sinusoid  f_valid_7_4_4_MnTiOF_fromBin_sinusoid
sparsipy/model/: __init__.py  adaptive_lasso.py  base.py  best_subset.py  lasso.py  mixedL0.py
src/: requirements.txt
src/sparselm/: __init__.py  dataset.py  model_selection.py  stepwise.py  tools.py
src/sparselm/_utils/: validation.py
src/sparselm/model/: __init__.py  _adaptive_lasso.py  _base.py  _composite.py  _lasso.py  _ols.py  _stepwise.py
src/sparselm/model/_miqp/: __init__.py  _base.py  _best_subset.py  _regularized_l0.py
src/sparselm/model/miqp/: __init__.py  (+2 more)
tests/: conftest.py  pytest.ini  test_all_models.py  test_best_subset.py  test_common.py  test_composite.py  test_dataset.py  test_lasso.py  test_miqp.py  test_model.py  test_model_selection.py  test_ols.py  test_optimizers.py  test_stepwise.py  test_tools.py
theorytoolkit/regression/: __init__.py  adaptive_lasso.py  base.py  estimator.py  gspreserve.py  gurobi_optimization.py  l1l0.py  l2l0.py  lasso.py  mixedL0.py  ols.py  tools.py  utils.py  wdr_lasso.py
theorytoolkit/regression/examples/: test_opt_cvx_gurobi.ipynb
(+1 files in other folders)
