[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-lm"
description = "Sparse linear regression models"
authors = [
    {name = "Luis Barroso-Luque", email = "lbluque@berkeley.edu"}
]
readme = "README.md"
license = {text = "BSD 3-Clause License"}
dynamic = ["version"]
dependencies = [
    "numpy >=1.23", "cvxpy >=1.2", "scikit-learn >=1.2.1",
    "scipy >=1.9", "joblib"
    ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = ["pre-commit", "black", "isort", "flake8", "pylint", "pydocstyle", "flake8-pyproject"]
# Gurobipy needed by mixedL0 tests, pandas needed by sklearn convention checks.
tests = ["pytest >=7.2.0", "pytest-cov >=4.0.0", "coverage", "pandas", "gurobipy", "pyscipopt"]
docs = ["sphinx>=5.3", "furo", "m2r2", "sphinx-gallery", "matplotlib", "gurobipy", "pymatgen"]
optional = ["gurobipy"]

# pyproject.toml
[tool.setuptools_scm]

# linting tools, etc
[tool.pytest.ini_options]
minversion = "6.0"
addopts  =  "-x --durations = 30 --quiet -rxXs --color = yes"
filterwarnings  = [
    'ignore::UserWarning',
    'ignore::FutureWarning',
    'ignore::RuntimeWarning'
    ]

[tool.flake8]
exclude  =  ['docs', 'tests']
ignore  =  ['E203', 'E501', 'W503']
max-line-length  =  88

[tool.pylint.main]
ignore = ["tests"]

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
method-naming-style = "snake_case"
function-naming-style = "snake_case"
class-naming-style = "PascalCase"
good-names  =  ['id', 'kB', 'i', 'j', 'k', 'f']

[too.pylint."messages control"]
disable  =  ['W0511', 'R0904', 'R0903', 'R0913', 'R0902', 'R0914', 'C0415']

[tool.codespell]
skip = "*.c,./.*"
count = ''
quiet-level = 3
ignore-words-list = ['nd', 'tread']

[tool.coverage.run]
source = ["src/sparselm"]
omit = ["*/__init__.py"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D107"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.linalg"]
ignore_missing_imports = true
